# mlops-practice

./: .dockerignore  .env.clearml.example  .env.example  .gitignore  README.md  clearml_test_task.py  docker-compose.clearml.yaml  docker-compose.yml  pyproject.toml
.docker/: Dockerfile
data/: download_dataset.py
src/: app.py  celery_app.py  celery_factory.py  log_dataset_stats.py  preprocess.py  settings.py  tasks.py  train.py  ui_gradio.py  ui_gradio_via_clearml_serving.py  upload_dataset.py
src/api/routes/: __init__.py  healthcheck.py  predict.py
src/schemas/: healthcheck.py  requests.py  tasks.py
src/services/: loaders.py  model.py
